--- a/src/styles/base/mixins/button.less
+++ b/src/styles/base/mixins/button.less
@@ -74,7 +74,7 @@
 
 
 // Button Size
-.button-size( @font-size: @button-font-size, @height: @button-height, @padding-horizontal: @button-horizontal-padding, @border-width: @button-border-width) {
+.button-size( @font-size: @button-font-size, @height: @button-height, @padding-horizontal: @button-padding-x, @border-width: @button-border-width) {
     // Pre-calculated multiplier for padding
     @multiplier-return: @height / @button-height;
     font-size: @font-size;
