--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -55,10 +55,10 @@
 @import "utilities/widths";
 
 // Vendor and external stylesheets
-//@import 'vendor/';
+//@import "vendor/";
 
 // Components
-//@import 'components/hero';
+//@import "components/hero";
 
 // Pages
-//@import 'pages/';
+//@import "pages/";
