--- a/src/styles/utilities/colors.less
+++ b/src/styles/utilities/colors.less
@@ -4,79 +4,79 @@
 .use-colors(@boolean) when (@boolean =true) {
 
 
-    // Muted
+	// Muted
 
-    .u-muted {
-        opacity: .5 !important;
-    }
+	.u-muted {
+		opacity: .5 !important;
+	}
 
-    // Text colors
+	// Text colors
 
-    .u-color-white {
-        color: @white  !important;
-    }
+	.u-color-white {
+		color: @white  !important;
+	}
 
-    .u-color-black {
-        color: @black  !important;
-    }
+	.u-color-black {
+		color: @black  !important;
+	}
 
-    .u-color-base {
-        color: @base-color  !important;
-    }
+	.u-color-base {
+		color: @base-color  !important;
+	}
 
-    .u-color-primary {
-        color: @color-primary  !important;
-    }
+	.u-color-primary {
+		color: @color-primary  !important;
+	}
 
-    .u-color-secondary {
-        color: @color-secondary  !important;
-    }
+	.u-color-secondary {
+		color: @color-secondary  !important;
+	}
 
-    .u-color-success {
-        color: @color-success  !important;
-    }
+	.u-color-success {
+		color: @color-ui-success  !important;
+	}
 
-    .u-color-warning {
-        color: @color-warning  !important;
-    }
+	.u-color-warning {
+		color: @color-ui-warning  !important;
+	}
 
-    .u-color-error {
-        color: @color-error  !important;
-    }
+	.u-color-error {
+		color: @color-ui-error  !important;
+	}
 
-    // Background colors
+	// Background colors
 
-    .u-background-white {
-        background-color: @white  !important;
-    }
+	.u-background-white {
+		background-color: @white  !important;
+	}
 
-    .u-background-black {
-        background-color: @black  !important;
-    }
+	.u-background-black {
+		background-color: @black  !important;
+	}
 
-    .u-background-base {
-        background-color: @base-color  !important;
-    }
+	.u-background-base {
+		background-color: @base-color  !important;
+	}
 
-    .u-background-primary {
-        background-color: @color-primary  !important;
-    }
+	.u-background-primary {
+		background-color: @color-primary  !important;
+	}
 
-    .u-background-secondary {
-        background-color: @color-secondary  !important;
-    }
+	.u-background-secondary {
+		background-color: @color-secondary  !important;
+	}
 
-    .u-background-success {
-        background-color: @color-success  !important;
-    }
+	.u-background-success {
+		background-color: @color-ui-success  !important;
+	}
 
-    .u-background-warning {
-        background-color: @color-warning  !important;
-    }
+	.u-background-warning {
+		background-color: @color-ui-warning  !important;
+	}
 
-    .u-background-error {
-        background-color: @color-error  !important;
-    }
+	.u-background-error {
+		background-color: @color-ui-error  !important;
+	}
 
 }
 
