--- a/src/styles/base/forms.less
+++ b/src/styles/base/forms.less
@@ -1,10 +1,12 @@
 //
 // Forms
 // -------------------------------------------------------
+
 .use-forms(@boolean) when (@boolean =true) {
 
 	fieldset {
 		margin: 0 0 @spacing-base 0;
+		.hook-fieldset;
 
 		&:last-child {
 			margin-bottom: 0; // remove unnecessary margin from last fieldset
@@ -17,6 +19,7 @@
 		font-size: @legend-font-size;
 		font-weight: @legend-font-weight;
 		margin-bottom: @spacing-half;
+		.hook-legend;
 	}
 
 	label {
@@ -26,6 +29,7 @@
 		font-family: @label-font-family;
 		font-size: @label-font-size;
 		font-weight: @label-font-weight;
+		.hook-label;
 	}
 
 	input[type="date"],
@@ -78,3 +82,10 @@
 }
 
 .use-forms(@use-forms);
+
+// Hooks
+.hook-fieldset() {}
+
+.hook-legend() {}
+
+.hook-label() {}
