--- a/src/styles/base/horizontal-rule.less
+++ b/src/styles/base/horizontal-rule.less
@@ -1,6 +1,7 @@
 //
 // Horizontal rule
 // -------------------------------------------------------
+
 .horizontal-rule(@boolean) when (@boolean =true) {
 
 	hr,
@@ -10,8 +11,12 @@
 		clear: both;
 		margin-bottom: @hr-margin;
 		margin-top: @hr-margin;
+		.hook-hr;
 	}
 
 }
 
 .horizontal-rule(@use-horizontal-rule);
+
+// Hooks
+.hook-hr() {}
