--- a/src/styles/base/mixins/color-variables.less
+++ b/src/styles/base/mixins/color-variables.less
@@ -1,28 +1,55 @@
 //
-// Social Media colors
+// Color variables
 // -------------------------------------------------------
 
-@color-dribbble:                        #EA4C89;
-@color-dropbox:                         #007ee5;
+// Greyscale
+@grey-25:                               lighten(@black, 97,5%);
+@grey-50:                               lighten(@black, 95%);
+@grey-100:                              lighten(@black, 90%);
+@grey-200:                              lighten(@black, 80%);
+@grey-300:                              lighten(@black, 70%);
+@grey-400:                              lighten(@black, 60%);
+@grey-500:                              lighten(@black, 50%);
+@grey-600:                              lighten(@black, 40%);
+@grey-700:                              lighten(@black, 30%);
+@grey-800:                              lighten(@black, 20%);
+@grey-900:                              lighten(@black, 10%);
+
+// Primary Colors
+@color-primary-25:                     tint(@color-primary, 95%);
+@color-primary-50:                     tint(@color-primary, 90%);
+@color-primary-100:                    tint(@color-primary, 80%);
+@color-primary-200:                    tint(@color-primary, 60%);
+@color-primary-300:                    tint(@color-primary, 40%);
+@color-primary-400:                    tint(@color-primary, 20%);
+@color-primary-500:                    @color-primary;
+@color-primary-600:                    shade(@color-primary, 20%);
+@color-primary-700:                    shade(@color-primary, 40%);
+@color-primary-800:                    shade(@color-primary, 60%);
+@color-primary-900:                    shade(@color-primary, 80%);
+
+// Secondary Colors
+@color-secondary-25:                   tint(@color-secondary, 95%);
+@color-secondary-50:                   tint(@color-secondary, 90%);
+@color-secondary-100:                  tint(@color-secondary, 80%);
+@color-secondary-200:                  tint(@color-secondary, 60%);
+@color-secondary-300:                  tint(@color-secondary, 40%);
+@color-secondary-400:                  tint(@color-secondary, 20%);
+@color-secondary-500:                  @color-secondary;
+@color-secondary-600:                  shade(@color-secondary, 20%);
+@color-secondary-700:                  shade(@color-secondary, 40%);
+@color-secondary-800:                  shade(@color-secondary, 60%);
+@color-secondary-900:                  shade(@color-secondary, 80%);
+
+// Social media colors
 @color-facebook:                        #3B5998;
-@color-flickr:                          #0063dc;
-@color-foursquare:                      #FC4575;
-@color-github:                          #181717;
-@color-google:                          #4285f4;
-@color-heimo:                           #ffb549;
 @color-instagram:                       #C32AA3;
 @color-linkedin:                        #007BB6;
-@color-medium:                          #00ab6b;
-@color-mixcloud:                        #314359;
 @color-pinterest:                       #CB2027;
 @color-rss:                             #ffa500;
 @color-snapchat:                        #FFFC00;
-@color-skype:                           #00AFF0;
-@color-souncloud:                       #ff3300;
 @color-spotify:                         #1ED760;
-@color-tumblr:                          #36465d;
 @color-twitter:                         #00B6F1;
 @color-vimeo:                           #45BBFF;
 @color-whatsapp:                        #25D366;
-@color-wordpress:                       #25D366;
 @color-youtube:                         #FF0000;
