--- a/src/styles/objects/media.less
+++ b/src/styles/objects/media.less
@@ -3,79 +3,121 @@
 // -------------------------------------------------------
 .media(@boolean) when (@boolean =true) {
 
-    // Usage
-    // <element class="media media--16-9">
-    //    <embed>...</embed>
-    // </element>
+	// Usage
+	// <element class="media media--16-9">
+	//    <embed>...</embed>
+	// </element>
 
-    .media {
-        .aspect-ratio-container();
-        background: @media-background;
-        iframe,
-        object,
-        embed,
-        video {
-            border: 0;
-        }
-    }
-    // Media Ratios
-    .media-1-2 {
-        .aspect-ratio(1, 2);
-    }
-    .media--9-16 {
-        .aspect-ratio(9, 16);
-    }
-    .media--3-5 {
-        .aspect-ratio(3, 5);
-    }
-    .media--2-3 {
-        .aspect-ratio(2, 3);
-    }
-    .media--3-4 {
-        .aspect-ratio(3, 4);
-    }
-    .media--4-5 {
-        .aspect-ratio(4, 5);
-    }
-    .media--1 {
-        .aspect-ratio(1, 1);
-    }
-    .media--5-4 {
-        .aspect-ratio(5, 4);
-    }
-    .media--4-3 {
-        .aspect-ratio(4, 3);
-    }
-    .media--3-2 {
-        .aspect-ratio(3, 2);
-    }
-    .media--5-3 {
-        .aspect-ratio(5, 3);
-    }
-    .media--16-9 {
-        .aspect-ratio(16, 9);
-    }
-    .media--2-1 {
-        .aspect-ratio(2, 1);
-    }
-    .media--cover,
-    .media--background {
-        > *:first-child {
-            object-fit: cover;
-            object-position: center;
-        }
-    }
-    .media--contain {
-        > *:first-child {
-            object-fit: contain;
-            object-position: center;
-        }
-    }
+	.media {
+		.aspect-ratio-container();
+		background: @media-background;
 
-    .media--background {
-        .cover();
-        z-index: -1;
-    }
+		iframe,
+		object,
+		embed,
+		video {
+			border: 0;
+		}
+
+		.hook-media;
+	}
+
+	// Media Ratios
+	.media-1-2 {
+		.aspect-ratio(1, 2);
+	}
+
+	.media--9-16 {
+		.aspect-ratio(9, 16);
+	}
+
+	.media--3-5 {
+		.aspect-ratio(3, 5);
+	}
+
+	.media--2-3 {
+		.aspect-ratio(2, 3);
+	}
+
+	.media--3-4 {
+		.aspect-ratio(3, 4);
+	}
+
+	.media--4-5 {
+		.aspect-ratio(4, 5);
+	}
+
+	.media--1 {
+		.aspect-ratio(1, 1);
+	}
+
+	.media--5-4 {
+		.aspect-ratio(5, 4);
+	}
+
+	.media--4-3 {
+		.aspect-ratio(4, 3);
+	}
+
+	.media--3-2 {
+		.aspect-ratio(3, 2);
+	}
+
+	.media--5-3 {
+		.aspect-ratio(5, 3);
+	}
+
+	.media--16-9 {
+		.aspect-ratio(16, 9);
+	}
+
+	.media--2-1 {
+		.aspect-ratio(2, 1);
+	}
+
+	// Hook Media Ratios
+	.hook-media-ratios;
+
+	.media--cover {
+		>*:first-child {
+			object-fit: cover;
+			object-position: center;
+		}
+
+		.hook-media--cover;
+	}
+
+	.media--contain {
+		>*:first-child {
+			object-fit: contain;
+			object-position: center;
+		}
+
+		.hook-media--contain;
+	}
+
+	.media--background {
+		.cover();
+		z-index: -1;
+
+		>*:first-child {
+			object-fit: cover;
+			object-position: center;
+		}
+
+		.hook-media--background;
+	}
 }
 
 .media(@use-media);
+
+// Hooks
+.hook-media() {}
+
+.hook-media-ratios() {}
+
+.hook-media--cover() {}
+
+.hook-media--contain() {}
+
+.hook-media--background() {}
